--- a/theme/static_src/package.json
+++ b/theme/static_src/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm run dev",
     "build": "npm run build:clean && npm run build:tailwind",
-    "build:clean": "rimraf ../../static/css",
+    "build:clean": "rimraf ../../static/css/main.css",
     "build:tailwind": "cross-env NODE_ENV=production tailwindcss --postcss -i ./source.css -o ../../static/css/main.css --minify",
     "dev": "cross-env NODE_ENV=development tailwindcss --postcss -i ./source.css -o ../../static/css/main.css -w",
     "tailwindcss": "node ./node_modules/tailwindcss/lib/cli.js"
